[package]
name = "ratmole"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0.73", features = ["full"]}
env_logger = "0.8.4"
log = "0.4.14"
colored = "2.0.0"
quick-error = "2.0.1"
regex = "1.5.4"
lazy_static = "1.4.0"
toml = "0.5.8"
semver = "1.0.3"
