[package]
name = "ratmole"
version = "0.1.0"
edition = "2018"
authors = ["Deep Majumder"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0.73", features = ["full"]}
env_logger = "0.8.4"
log = "0.4.14"
colored = "2.0.0"
quick-error = "2.0.1"
toml = "0.5.8"
semver = "1.0.3"
cargo = "0.54.0"
anyhow = "1.0.42"
rayon = "1.5.1"
regex = "1.5.4"
lazy_static = "1.4"
git2 = "0.13.23"
home = "0.5.3"

[dev-dependencies]
tokio = { version = "1.8.1", features = ["rt-multi-thread", "macros"] }
